Font - FontAwesome, Xeicon

--- a/FrontEnd/220607 - FontAwesome/css/style.css
+++ b/FrontEnd/220607 - FontAwesome/css/style.css
@@ -1,3 +1,6 @@
+@import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.css');
+@import url('http://cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css');
+
 .fa {
     font-size: 100px;
     color: crimson;
