3타입 상단 네비게이션

--- a/FrontEnd/220609 - 3타입 상단 네비게이션/css/style2.css
+++ b/FrontEnd/220609 - 3타입 상단 네비게이션/css/style2.css
@@ -20,7 +20,7 @@ a {
     color: #222;
 }
 
-/* Three type Header Navigation */
+/* type 2 Header Navigation */
 header {
     font-weight: normal;
     background: #fff;
