--- a/FrontEnd/220612 - Table/css/style.css
+++ b/FrontEnd/220612 - Table/css/style.css
@@ -1,8 +1,10 @@
 /* Google Web Font */
 @import url('https://fonts.googleapis.com/css?family=Montserrat:300,400,500&display=swap');
+
 * {
     box-sizing: border-box;
 }
+
 body {
     font-family: 'Montserrat', sans-serif;
     margin: 0;
@@ -67,8 +69,8 @@ body {
     color: crimson;
 }
 /* 아래 코드시 테이블이 미세하게 밀리는 현상 발생 */
-.member tr td:hover {
+/* .member tr td:hover {
     font-weight: bold;
     transition: 0.3s;
     cursor:pointer;
-}
+} */
