--- a/FrontEnd/220630 - Netflix Clone/css/style.css
+++ b/FrontEnd/220630 - Netflix Clone/css/style.css
@@ -121,3 +121,88 @@ header {
     font-size: 26px;
     cursor: pointer;
 }
+/* Section : Common CSS */
+section {
+    border-bottom: 10px solid #222222;
+    position: relative;
+}
+
+/* Section : Enjoy, Download, Watch, Create */
+.enjoy, .download, .watch, .create {
+    height: 500px;
+}
+.inner {
+    width: 1150px;
+    margin: auto;
+    overflow: hidden;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+.desc, .preview {
+    float: left;
+    width: 50%;
+}
+.desc {
+    padding-top: 40px;
+    width: 60%;
+}
+.desc h2 {
+    font-size: 50px;
+    line-height: 1.2em;
+}
+.desc p {}
+.preview {
+    text-align: center;
+    width: 40%;
+}
+.preview img {
+    height: 350px;
+}
+
+/* Section : Preview */
+.innervideo {
+    position: absolute;
+    z-index: -1;
+    width: 30%;
+    right: 5%;
+    top: 20%;
+}
+/* Section : Preview */
+.downloading {
+    border: 3px solid #404040;
+    background-color: #000;
+    width: 350px;
+    height: 100px;
+    border-radius: 10px;
+    position: absolute;
+    top: 60%;
+    left: 5%;
+    display: flex;
+}
+.downloading .poster {
+    height: 100%;
+    padding: 10px;
+}
+.download .text {
+    border: 1px solid #fff;
+    width: 450px;
+}
+.text span {
+    font-size: 18px;
+}
+.downloading p {
+    font-size: 15px;
+}
+.downloading .download-gif {}
+
+
+/* Section : Watch */
+.innervideo2 {
+    position: absolute;
+    z-index: -1;
+    width: 30%;
+    right: 5%;
+    top: 10%;
+}
