--- a/FrontEnd/220630 - Netflix Clone/css/style.css
+++ b/FrontEnd/220630 - Netflix Clone/css/style.css
@@ -11,7 +11,7 @@ body {
     background-color: #000;
     color: #fff;
     margin: 0;
-    line-height: 1.6em;
+    line-height: 1.3em;
     font-size: 26px;
 }
 a {
@@ -132,7 +132,7 @@ section {
     height: 500px;
 }
 .inner {
-    width: 1150px;
+    width: 1280px;
     margin: auto;
     overflow: hidden;
     position: absolute;
@@ -141,12 +141,15 @@ section {
     transform: translate(-50%, -50%);
 }
 .desc, .preview {
+    /* border: 1px solid yellow; */
     float: left;
     width: 50%;
+    /* padding: 0 30px; */
+    margin: 0 35px;
 }
 .desc {
     padding-top: 40px;
-    width: 60%;
+    width: 40%;
 }
 .desc h2 {
     font-size: 50px;
@@ -156,6 +159,7 @@ section {
 .preview {
     text-align: center;
     width: 40%;
+    margin-right: 30px;
 }
 .preview img {
     height: 350px;
@@ -166,43 +170,59 @@ section {
     position: absolute;
     z-index: -1;
     width: 30%;
-    right: 5%;
+    right: 15%;
     top: 20%;
 }
-/* Section : Preview */
+/* Section : Download - downloading:Starger things */
 .downloading {
     border: 3px solid #404040;
     background-color: #000;
-    width: 350px;
+    width: 330px;
     height: 100px;
     border-radius: 10px;
     position: absolute;
-    top: 60%;
-    left: 5%;
+    top: 65%;
+    left: 8%;
     display: flex;
 }
 .downloading .poster {
     height: 100%;
-    padding: 10px;
+    padding: 5px 15px;
 }
-.download .text {
-    border: 1px solid #fff;
-    width: 450px;
+.text {
+    width: 200px;
+    height: 100%;
+    text-align: left;
+    line-height: 1em;
+    margin-top: 15px;
 }
-.text span {
+.text h5 {
     font-size: 18px;
+    display: inline-block;
+    margin-top: 10px;
+    margin-bottom: 0px;
 }
 .downloading p {
     font-size: 15px;
+    margin-top: -10px;
+    color: #0071EB;
 }
-.downloading .download-gif {}
-
-
+.gif-box {
+    height: 80px;
+    width: 80px;
+    position: absolute;
+    right: 0;
+    top: 5px;
+}
+.downloading .download-gif {
+    width: inherit;
+    height: inherit;
+}
 /* Section : Watch */
 .innervideo2 {
     position: absolute;
     z-index: -1;
-    width: 30%;
-    right: 5%;
+    width: 24%;
+    right: 20%;
     top: 10%;
 }
